force-app/main/default/objects/FinancialDueDate__c/FinancialDueDate__c.object-meta.xml
<CustomObject>
    
    <label>Vencimento Financeiro</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nome de Vencimento Financeiro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vencimentos Financeiro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>