force-app/main/default/objects/FinancialDueDate__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commodity</valueSetName>
    </valueSet>
</CustomField>