force-app/main/default/objects/FinancialDueDate__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Vencimentos Financeiro</relationshipLabel>
    <relationshipName>Vencimentos_Financeiro</relationshipName>
    <type>Lookup</type>
</CustomField>