force-app/main/default/objects/FinancialDueDate__c/fields/FinancialDueDate__c.field-meta.xml
<CustomField>
    <fullName>FinancialDueDate__c</fullName>
    <label>Vencimento Financeiro</label>
    <required>true</required>
    <type>Date</type>
</CustomField>