force-app/main/default/objects/FinancialDueDate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commodity__c</columns>
    <columns>Crop__c</columns>
    <columns>FinancialDueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>